# niche-site-astro

./: .env.example  .gitignore  .windsurfrules  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
.astro/: types.d.ts
backend/crewai/: .env.example  README.md  agentstack.json  pyproject.toml
backend/crewai/src/: crew.py  main.py
backend/crewai/src/config/: agents.yaml  tasks.yaml
backend/crewai/src/models/: content_models.py  image_asset.py
backend/crewai/src/tools/: __init__.py  frontmatter_validator.py  unsplash_tool.py
docs/: ROADMAP.md  crewai-content-workflow.md  project_requirements.md
docs/reference/: content_types.md  crewai_config.md  internal_linking.md  layouts.md  schema_design.md  seo_utilities.md  utils.md
scripts/: process-internal-links.ts  schema-tools.ts  tsconfig.json  update-image-urls.ts  update-images.ts  update-internal-links.ts
src/components/: BlogCard.astro  Breadcrumb.astro  CTAAlert.astro  ContentCard.astro  ContentGrid.astro  FAQSection.astro  FeaturedPost.astro  FeaturedPosts.astro  Footer.astro  Hero.astro  Navbar.astro  PostCard.astro  RecentBlogs.astro  RecentContent.astro  RelatedContent.astro  SidebarCTA.astro  TableOfContents.astro  TopicSection.astro
src/content/: config.ts
src/content/_data/: internal_links.json
src/content/config/: cta.mdx  (+2 more)
src/layouts/: Layout.astro
src/pages/: index.astro
src/schemas/: content.ts
src/types/: gray-matter.d.ts  internal-links.ts
src/utils/: images.ts  internal-linking.ts  remark-internal-links.ts  remote-image.ts  seo-metadata.ts
(+50 files in other folders)
