[tool.poetry]
name = "crewai"
version = "0.0.1"
description = "This is the start of your AgentStack project."
authors = ["Name <Email>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
agentstack = {extras = ["crewai"], version="0.2.2.2"}

[project.scripts]
crewai = "crewai.main:run"
run_crew = "crewai.main:run"
train = "crewai.main:train"
replay = "crewai.main:replay"
test = "crewai.main:test"